h1. Version 0.3.0
Sept 2011

* Updated dUsefulStuff to obtain access to a better error handling routine.

h1. Version 0.2.0
July 2011

* Brought in dXPath to handle XPath queries against a UI.
* Fixed bug in stripping story: prefix.

h1. Version 0.1.0
July 2011

* Initial release of code. See Readme.